# ServiceNow_local_llm

./: .env.example  .eslintignore  .eslintrc.json  .gitignore  .gitlab-ci.yml  .prettierignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TEST.md  drizzle.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  run-diagnostic.js  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/commands/: speckit.implement.md
.specify/: init-options.json
.specify/memory/: constitution.md
.specify/templates/: spec-template.md  tasks-template.md
docs/: README.md  api-reference.md  configuration.md  getting-started.md  security_mcp_architecture.tsx  troubleshooting.md  user-guide.md
docs/features/: chat.md  now-assist.md  security-tab.md
specs/001-servicenow-mcp-app/: data-model.md  database-credential-storage-research.md  mcp-quick-reference.md  mcp-recommendations.md  mcp-research.md  phase1-validation.md  phase2-validation.md  plan.md  production-validation.md  quickstart.md  research.md  spec.md  tasks.md  us1-validation.md  us2-validation.md  us3-validation.md  us4-validation.md  us5-validation.md  us6-validation.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: keychain.rs  lib.rs
src-tauri/src/commands/: chat.rs  credentials.rs  mcp_proxy.rs  mod.rs  provider.rs  test_ollama.rs  test_servicenow.rs
src-tauri/src/integrations/: bitwarden.rs  mod.rs  ollama.rs  one_password.rs  servicenow.rs
src-tauri/src/mcp/: mod.rs  server.rs
src/main/: index.ts  (+1 more)
tests/: setup.ts
(+146 files in other folders)
